--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-composer.phar
+/build_local/
+/cache/
+/node_modules/
 /vendor/
+/.idea/
+/.vscode/
+npm-debug.log
 
-# Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+# Optional ignores
+/build_staging/
+/build_production/
+
+# Location of compiled assets
+/source/assets/build/
